--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -1,3 +1,7 @@
+2006-02-15  Paolo Melchiorre  <paulox@paulox.net>
+
+    * version.txt: Updated to2.1
+
 2006-02-14  Paolo Melchiorre  <paulox@paulox.net>
 
     * version.txt: Updated to 1.0
