--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -1,6 +1,16 @@
+2006-02-15  David Convent  <davconvent@gmail.com>
+
+    * profile/skins.py, configure.zcml, __init__.py: Added GenericSetup
+      profile
+    * Extensions/Install.py: Adapted the install method to make use of the
+      GenericSetup profile
+    * config.py, refresh.txt, Extensions/__init__.py: Removed unnecessary/not
+      working files
+    * version.txt: Updated to 2.5 (will not work with Plone 2.1)
+
 2006-02-15  Paolo Melchiorre  <paulox@paulox.net>
 
-    * version.txt: Updated to2.1
+    * version.txt: Updated to 2.1
 
 2006-02-14  Paolo Melchiorre  <paulox@paulox.net>
 
