--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -1,3 +1,7 @@
+2006-02-26  Paolo Melchiorre  <paulox@paulox.net>
+
+    * profile/skins.xml: Updated GenericSetup profile to support Ploneboard icons.
+
 2006-02-23  Paolo Melchiorre  <paulox@paulox.net>
 
     * Updated screenshot-en.gif, screenshot-it.gif
